--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: black;
   color: white;
@@ -25,7 +31,7 @@ header h3 {
 }
 
 .container tr:nth-child(even) {
-  background-color: green;
+  background-color: #777;
 }
 
 .container th {
@@ -41,6 +47,8 @@ header h3 {
 .container th,
 .container td {
   border: 1px solid white;
+  padding: 8px;
+  font-family: "Roboto", sans-serif;
 }
 
 footer {
