--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,7 +28,7 @@ header h3 {
   table-layout: fixed;
   margin: 0 auto;
   text-align: center;
-  width: 30%;
+  width: 500px;
   border-collapse: collapse;
 }
 
@@ -60,5 +60,11 @@ footer {
   align-items: center;
   height: 100px;
   border: 2px solid green;
+}
+
+@media screen and (max-width: 555px) {
+  table {
+    max-width: 70%;
+  }
 }
 
