--- a/public/css/app.css
+++ b/public/css/app.css
@@ -64,7 +64,21 @@ footer {
 
 @media screen and (max-width: 555px) {
   table {
-    max-width: 70%;
+    max-width: 80%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #title_show {
+    cursor: pointer;
+  }
+
+  .hidden {
+    display: none;
+  }
+
+  .hidden h3 {
+    margin-top: 10px;
   }
 }
 
